--- a/server/package.json
+++ b/server/package.json
@@ -32,15 +32,20 @@
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.2",
     "chai": "^4.4.1",
+    "coveralls": "^3.1.1",
     "env-cmd": "^10.1.0",
+    "nyc": "^17.1.0",
     "supertest": "^7.0.0",
     "tsc-watch": "^6.2.1",
-    "typescript": "^5.6.3"
+    "typedoc": "^0.27.3",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "c8": "^10.1.2",
     "cors": "^2.8.5",
     "debug": "^4.3.7",
+    "inquirer": "^12.1.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.8.2",
     "morgan": "^1.10.0",
