--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,16 +33,16 @@ jobs:
         echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/8.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-8.0.list
         sudo apt-get update
         sudo apt-get install -y mongodb-org=${{ matrix.mongodb-version }}
-        
+
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.10.0
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Install dependencies
-      working-directory: server
+      working-directory: /home/usuario/Proyecto-E02/server
       run: npm ci
 
     - name: Running tests
-      working-directory: server
+      working-directory: /home/usuario/Proyecto-E02/server
       run: npm run test
