--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        node-version: [16.x] 
+        node-version: [16.x, 18.x, 19.x, 20.x, 21.x]
         mongodb-version: ['8.0.3']
 
     steps:
@@ -41,7 +41,7 @@ jobs:
 
     - name: Install dependencies
       working-directory: server
-      run: npm ci
+      run: npm install
 
     - name: Running tests
       working-directory: server
