--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "mocha": "^10.8.2",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "express": "4.19.2"
   }
 }
