--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,20 +17,46 @@ jobs:
         mongodb-version: ['8.0.3']
 
     steps:
+    # 1. Checkout del repositorio
     - name: Git checkout
       uses: actions/checkout@v4
 
+    # 2. Configuración de Node.js y caché
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: server/package-lock.json  # Indicamos la ubicación del archivo
+        cache-dependency-path: server/package-lock.json
 
+    # 3. Instalación de dependencias
     - name: Install dependencies
       working-directory: server
       run: npm install
 
+  
+
+    # 5. Verifica que MongoDB está corriendo
+    - name: Check MongoDB status
+      run: sudo service mongod status
+
+    # 6. Arranca el servidor y lo ejecuta en segundo plano
+    - name: Start server
+      working-directory: server
+      run: npm start > server.log 2>&1 &
+
+    # 7. Verifica que el servidor está corriendo
+    - name: Test server connectivity
+      run: curl -I http://localhost:4200
+
+    # 8. Corre los tests
     - name: Running tests
       working-directory: server
+      env:
+        MOCHA_TIMEOUT: 10000  # Aumenta el timeout para evitar problemas de espera
       run: npm run test
+
+    # 9. Muestra logs si algo falla
+    - name: Show server logs
+      if: failure()
+      run: cat server.log
