--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,30 +46,42 @@ on:
     branches: [ "main" ]
 
 jobs:
-  backend-tests:
+  build:
+
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [17.x, 18.x, 19.x, 20.x, 21.x]
+        node-version: [16.x, 18.x, 19.x, 20.x, 21.x]
+        mongodb-version: ['5.0', '6.0', '7.0']
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Git checkout
+      uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: server/package-lock.json
+
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.10.0
       with:
-        mongodb-version: '8.0.3'
-    - name: Install Dependencies
-      run: npm i
-      working-directory: server
-    - name: Set Environment Variables
-      run: echo "MONGODB_URL=${{ secrets.ATLAS_URI }}" >> $GITHUB_ENV
-    - name: Test Backend
-      run: npm test
-      working-directory: server
+        mongodb-version: ${{ matrix.mongodb-version }}
 
+    - name: Set environment variables
+      run: echo "ATLAS_URI=${{ secrets.ATLAS_URI }}" >> $GITHUB_ENV
+
+    - name: Install dependencies 
+      run: npm ci
+      working-directory: server
+    
+    - name: Running tests
+      run: npm run test_github
+      working-directory: server
+      env:
+        ATLAS_URI: ${{ secrets.ATLAS_URI }}
+        ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
       
