--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,6 +52,7 @@ jobs:
 
     strategy:
       matrix:
+        max-parallel: 1
         node-version: [16.x, 18.x, 19.x, 20.x, 21.x]
         mongodb-version: ['5.0', '6.0', '7.0']
 
