--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -20,19 +20,29 @@ jobs:
       with:
         node-version: 20.x
         cache: 'npm'
+        cache-dependency-path: server/package-lock.json
 
     - name: Start MongoDB 7.0
       uses: supercharge/mongodb-github-action@1.10.0
       with:
         mongodb-version: '7.0'
 
+    - name: Set environment variables
+      run: echo "ATLAS_URI=${{ secrets.ATLAS_URI }}" >> $GITHUB_ENV
+
     - name: Install dependencies 
       run: npm ci
-    
+      working-directory: server
+
     - name: Generate coverage info
-      run: npm run coverage 
+      run: npm run coverage
+      working-directory: server
+      env:
+        ATLAS_URI: ${{ secrets.ATLAS_URI }}
+        ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
 
     - name: Coveralls
       uses: coverallsapp/github-action@v2.2.3
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: server/coverage/lcov.info
