--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -11,21 +11,27 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      max-parallel: 1
+      matrix:
+        node-version: [20.x, 21.x]
+        mongodb-version: ['6.0', '7.0']
+
     steps:
     - name: Git checkout
       uses: actions/checkout@v4
 
-    - name: Use Node.js 20.x
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        node-version: 20.x
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: server/package-lock.json
 
-    - name: Start MongoDB 7.0
+    - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.10.0
       with:
-        mongodb-version: '7.0'
+        mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Set environment variables
       run: echo "ATLAS_URI=${{ secrets.ATLAS_URI }}" >> $GITHUB_ENV
@@ -33,16 +39,17 @@ jobs:
     - name: Install dependencies 
       run: npm ci
       working-directory: server
-
-    - name: Generate coverage info
-      run: npm run coverage
+    
+    - name: Running tests
+      run: npm run test_github
       working-directory: server
       env:
         ATLAS_URI: ${{ secrets.ATLAS_URI }}
         ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
 
-    - name: Coveralls
-      uses: coverallsapp/github-action@v2.2.3
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: server/coverage/lcov.info
+    - name: Upload coverage to Coveralls
+      run: npm run coverage
+      working-directory: server
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+
